# subscription-manager

./: .env.example  .gitignore  CHANGELOG.md  Pipfile  README.md  docker-compose.production.yml  docker-compose.yml  fabfile.py  gulpfile.js  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  reset.sh
account/: admin.py  backends.py  forms.py  managers.py  models.py  urls.py  views.py
apps/subscription/: apps.py  models.py
apps/user/: managers.py  models.py
authentication/: admin.py  backends.py  decorators.py  forms.py  managers.py  models.py  tests.py  urls.py  views.py
configuration/: crontab  supervisor.conf
core/: settings.py  urls.py  wsgi.py
core/settings/: base.py  development.py  production.py  testing.py
nginx/conf.d/: subscription_manager.conf
payment/: models.py
settings/: base.py  development.py
static/scripts/: main.js
static/styles/: main.css  main.css.map
subscription/: admin.py  models.py
subscription_manager/: Dockerfile  Dockerfile.production  celery.py  cron.py  urls.py  views.py  wsgi.py
subscription_manager/administration/: apps.py  urls.py  views.py
subscription_manager/authentication/: admin.py  apps.py  backends.py  forms.py  managers.py  models.py  tests.py  urls.py  views.py
subscription_manager/core/: celery.py  urls.py  wsgi.py
subscription_manager/landing/: apps.py  urls.py  views.py
subscription_manager/management/: apps.py  urls.py  (+1 more)
templates/: base.html  base_email.html
tests/: test_authentication.py
user/: admin.py
utils/: tags.py
zsavs/: settings.py  urls.py  wsgi.py
(+227 files in other folders)
